# viper-os

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  limine.cfg
atheris/amd64/: .gitignore  CMakeLists.txt  build_iso.sh  debug.sh  get_limine_header.sh  limine.cfg  linker.ld  run.sh
atheris/amd64/include/: stdint.h
atheris/amd64/include/cpu/: asm.h  cpu.h  gdt.h  idt.h
atheris/amd64/include/driver/: acpi.h  hpet.h  port.h
atheris/amd64/include/mm/: pm.h
atheris/amd64/include/util/: debug.h
atheris/amd64/source/boot/: init.cpp  start.cpp
atheris/amd64/source/cpu/: asm.cpp  exception.cpp  gdt.cpp  gdt_install.s  idt.cpp  interrupt_table.s
atheris/amd64/source/driver/: acpi.cpp  hpet.cpp
atheris/amd64/source/mm/: pm.cpp
atheris/x64/: CMakeLists.txt  build_iso.sh  debug.sh  get_limine_header.sh  limine.cfg  linker.ld  run.sh
atheris/x64/include/cpu/: asm.h  context.h  syscall.h
atheris/x64/include/driver/: acpi.h  consoleInstall.h  framebufferInstall.h  hpet.h
atheris/x64/include/fs/: module.h
atheris/x64/include/mm/: util.h
atheris/x64/src/: main.cpp
atheris/x64/src/atheris/: halt.cpp
atheris/x64/src/cpu/: asm.cpp  syscall.cpp  syscall_handler.s
atheris/x64/src/driver/: acpi.cpp  consoleInstall.cpp  framebufferInstall.cpp  hpet.cpp
atheris/x64/src/fs/: module.cpp
atheris/x64/src/mm/: util.cpp
drivers/: .gitignore  CMakeLists.txt  linker.ld
drivers/drivers/fb/: CMakeLists.txt  linker.ld  main.c
drivers/drivers/sample/: CMakeLists.txt  main.c
drivers/include/: driver.h  stdint.h  string.h
echis/: CMakeLists.txt
echis/include/: algorithm  atomic  compare  cstddef  cstdlib  cstring  intrusive_list.h  intrusive_ring.h  lazy_init.h  list  memory  new  stddef.h  stdlib.h  string  string.h  type_traits  utility  vector
echis/include/echis/: main.h
echis/include/echis/core/: kernel.h
echis/include/echis/driver/: console.h  debugcon.h  export.h  framebuffer.h
echis/include/echis/event/: exit.h  write.h
echis/include/echis/exception/: exception.h
echis/include/echis/fs/: devfs.h  initrd.h  testfs.h  tmpfs.h  vfs.h
echis/include/echis/ldr/: elf.h
echis/include/echis/mm/: heap.h  physaddr.h  physical.h  pmm.h  vmm.h
echis/include/echis/sched/: pipe.h  proc.h  process.h  processFd.h  sched.h
echis/include/echis/signal/: signal.h
echis/include/echis/std/: utility.h
echis/include/echis/util/: debug.h  math.h
echis/include/libc/: stdio.h  string.h
echis/include/mm/: pmm.h
echis/source/: main.cpp  new.cpp  string.cpp
echis/source/driver/: debugcon.cpp
echis/source/driver/ldr/: loader.cpp
echis/source/exception/: exception.cpp
echis/source/fs/: devfs.cpp  testfs.cpp  vfs.cpp
echis/source/libc/: new.cpp  stdlib.cpp  string.cpp
echis/source/mm/: heap.cpp  physical.cpp
echis/source/mm/vm/: alloc.cpp  lazyMap.cpp
echis/source/sched/: proc.cpp  sched.cpp
echis/source/sched/event/: event.cpp
echis/source/sched/lock/: mutex.cpp
echis/src/core/: kernel.cpp  test_user_program.s
echis/src/core/exception/: exception.cpp
echis/src/driver/: console.cpp  framebuffer.cpp
echis/src/driver/impl/: console.cpp  framebuffer.cpp
echis/src/event/: exit.cpp  write.cpp
echis/src/fs/: devfs.cpp  initrd.cpp  tmpfs.cpp  vfs.cpp
echis/src/ldr/: elf.cpp
echis/src/libc/: stdio.cpp  string.cpp
echis/src/mm/: heap.cpp  pmm.cpp  vmm.cpp
echis/src/sched/: pipe.cpp  process.cpp  sched.cpp
echis/src/signal/: signal.cpp
echis/src/std/container/: string.cpp
echis/src/std/thread/: mutex.cpp
echis/src/syscall/file/: close.cpp  ioctl.cpp  movfd.cpp  open.cpp  poll.cpp  read.cpp  seek.cpp  write.cpp
echis/src/syscall/info/: sysconf.cpp
echis/src/syscall/mem/: mmap.cpp
echis/src/syscall/proc/: exit.cpp  (+6 more)
krnl/: CMakeLists.txt  build_iso.sh  debug.sh  limine.cfg  run.sh
krnl/include/: elf.h  stdarg.h  stdbool.h  stdint.h  string.h  util.h
krnl/include/acpi/: acpi.h  hpet.h  madt.h
krnl/include/cpu/: asm.h  cpu.h  gdt.h  idt.h  swtch.h  tss.h
krnl/include/driver/: dbg.h  driver.h  keyboard.h
krnl/include/event/: bus.h  object.h
krnl/include/fs/: devfs.h  initrd.h  module.h  testfs.h  vfs.h
krnl/include/ldr/: elf.h
krnl/include/mm/: kheap.h  pm.h  vm.h
krnl/include/sched/: pipe.h  proc.h  procfd.h  sched.h
krnl/include/signal/: signal.h
krnl/include/syscall/: stat.h  syscalls.h
krnl/include/thread/: proc.h
krnl/source/: init.c
krnl/source/acpi/: acpi.c  hpet.c  madt.c
krnl/source/cpu/: cpu.c  gdt.c  install_gdt.s  syscall.s  tss.c
krnl/source/driver/: dbg.c  keyboard.c
krnl/source/event/: bus.c  object.c
krnl/source/fs/: devfs.c  initrd.c  module.c  testfs.c  vfs.c
krnl/source/ldr/: elf.c
krnl/source/libc/: string.c
krnl/source/mm/: kheap.c  pm.c  vm.c
krnl/source/sched/: idle.s  pipe.c  prepare_thread.s  proc.c  sched.c  swtch.s  user.s
krnl/source/signal/: signal.c  signal.s
krnl/source/syscall/: syscall.c
krnl/source/thread/: proc.c
tests/: CMakeLists.txt  coverage.sh
tests/include/mock/: mock.h
tests/src/: test.cpp
tests/src/driver/: consoleTests.cpp  framebufferTests.cpp
tests/src/mm/: pmmTests.cpp
user/: .gitignore  CMakeLists.txt  linker.ld  test.c
user/coreutils/: CMakeLists.txt  cat.c  clear.c  fault.c  fault2.c  hello.c  ls.c  mkdir.c  pwd.c  uname.c
user/etc/: hostname
user/ld/: CMakeLists.txt  main.c  start.s
user/ld/include/: elf.h  stdint.h  syscall.h
user/ld/source/: main.c  start.s
user/libc/: CMakeLists.txt  test.c
user/libc/include/: ctype.h  dirent.h  poll.h  readline.h  sched.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
user/libc/source/: crt0.s  ctype.c  dirent.c  poll.c  readline.c  sched.c  signal.c  stdio.c  stdlib.c  string.c
user/sh/: CMakeLists.txt
user/sh/include/: lexer.h
user/sh/source/: lexer.c  sh.c
user/tty/: CMakeLists.txt
user/tty/include/: escape.h  font.h  layout.h  screen.h
user/tty/source/: font.c  screen.c  tty.c
user/usertest/: CMakeLists.txt  echo.c  hello.c  ls.c  sh.c  test.c  test2.c  touch.c
vipera/amd64/: CMakeLists.txt
(+327 files in other folders)
